# cpp_year_2026

./: .gitignore  README.md
Alyosha/february/01/: main
Alyosha/february/25/: bjarne.cpp  main  pointers.cpp  vector.cpp
Alyosha/february/27/: classes.cpp  classes2.cpp  main  operator.cpp  vector.cpp
Alyosha/march/05/: hello.cpp
Alyosha/march/06/: vector.cpp
Alyosha/march/07/: willy.cpp
Old files/SFML/02/: sfml.cpp
Old files/SFML/03/: sfml.cpp
Old files/SFML/07/: sfml.cpp
Old files/mes_01/01/: calculadora_basica.cpp
SFML/: CMakeLists.txt  main
SFML/07/: sfml2.cpp
SFML/08/: prueba.cpp  sfml.cpp
alyosha/: new.cpp
circle_coll/: CMakeLists.txt
mes_01/: main
mes_01/01/: calculadora
mes_01/03/: main  main2  module_tests.cpp
mes_01/06/: main
mes_01/08/: main
mes_01/10/: main
mes_01/11/: stdVector.cpp
mes_01/12/: main  stdVector.cpp
mes_01/14/: lvalue.cpp  lvalue3.cpp
mes_01/16/: Lreferences.cpp
mes_01/18/: main  marina.cpp
mes_01/19/: pointers3.cpp
mes_01/20/: main
mes_01/23/: main  pointers.cpp
mes_01/24/: functions.cpp  main
mes_01/26/: work.cpp
mes_01/27/: main  trigo.cpp
mes_01/28/: direction.cpp
mes_01/29/: claire.cpp  main  main2
mes_02/01/: estructs.cpp
mes_02/02/: structs.cpp
mes_02/03/: structs.cpp
mes_02/04/: main  pointers.cpp
mes_02/05/: main  pusback.cpp  test.cpp
mes_02/07/: bjarne.cpp
mes_02/08/: bjarne.cpp  main
mes_02/09/: main
mes_02/11/: bjarne.cpp
mes_02/12/: main  tic.cpp
mes_02/16/: main
mes_02/18/: iso.cpp
mes_02/calculator/: calculator3.cpp  main  prueba.cpp
(+66 files in other folders)
